--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>SL Literature II Blogs</title>
   </head>
   <body>
-    <h1>esfheheah</h1>
+    <h1>SL Literature II Blogs</h1>
   </body>
 </html> 
