--- a/index.html
+++ b/index.html
@@ -1,12 +1,62 @@
-<!Doctype html>
+Skip to content
+This repository
+Search
+Pull requests
+Issues
+Marketplace
+Explore
+ @e414rr
+ Sign out
+ Watch 0
+  Star 0
+ Fork 0 e414rr/blog
+ Code  Issues 0  Pull requests 0  Projects 0  Wiki  Insights  Settings
+Branch: master Find file Copy pathblog/index.html
+b747141  15 minutes ago
+@e414rr e414rr Update index.html
+1 contributor
+RawBlameHistory    
+32 lines (26 sloc)  1.06 KB
+<!DOCTYPE html>
 <html>
   <head>
-    <title>Blogs</title>
+    <meta charset="UTF-8">
+    <title>SL Literature II Blogs</title>
   </head>
-
   <body>
-    <h1>Blog</h1>
-   </body>
-
-
-</html>
+    <h1 style="background-color:snow; text-align:center; font-size:3em;"><u><i>SL Literature II Blogs</i></u></h1>
+	<p>Edgar Robles
+	</p>
+	
+	<h1 style="color:rebeccapurple;"><u>Blogs</u></h1>
+	
+	<style>
+		body{
+			background-color: whitesmoke;
+	}
+	</style>
+    
+    <section>
+		
+		<h3 style="background-color:yellow;">A narrator may be close to, or even part
+		of, the action in a work of fiction, or
+		distant in time and/or space. What is the
+		effect of either the closeness or the
+		distance of narrators?</h3>
+		<p style="background-color:DodgerBlue;"><b>The narrator telling a story can make a story sound how they want to make it sound. They set the tone for the whole book. Their choice of language is impactful and can foreshadow events in a fiction book. Especially in works from the Gothic and Romantic era. Narrators can also be fully or limited omniscient and tell the reader everything a chracter is feeling.</b></p>
+		
+	</section>
+  </body>
+</html> 
+© 2017 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Help
+Contact GitHub
+API
+Training
+Shop
+Blog
+About
