--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			background-color: whitesmoke;
 		}
 		#wrap{
-			width:100%
+			width:50px;
 		}
 		.left{
 			width:240px;
@@ -30,16 +30,16 @@
 		}
 	</style>
     
-    <div id="wrap"><section>
+    	<div id="wrap">
 		
-		<div class="left"><h3 style="background-color:yellow;">A narrator may be close to, or even part
+		<div class="left"><p style="background-color:yellow;">A narrator may be close to, or even part
 		of, the action in a work of fiction, or
 		distant in time and/or space. What is the
 		effect of either the closeness or the
-		distance of narrators?</h3></div>
+		distance of narrators?<p></div>
 	    
 		<div class="right"><p style="background-color:DodgerBlue;"><b>The narrator telling a story can make a story sound how they want to make it sound. They set the tone for the whole book. Their choice of language is impactful and can foreshadow events in a fiction book. Especially in works from the Gothic and Romantic era. Narrators can also be fully or limited omniscient and tell the reader everything a chracter is feeling.</b></p></div>
 		
-			</section></div>
+	</div>
   </body>
 </html> 
