--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 			width:50px;
 		}
 		.left{
-			width:240px;
+			width:50%;
 			height:123px;
 			float:left;		
 		}
 		.right{
-			width:240px;
+			width:50%;
 			height:123px;
-			float:left;		
+			float:right;		
 		}
 	</style>
     
