--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   </head>
   <body>
     <h1 style="background-color:snow; text-align:center; font-size:3em;"><u><i>SL Literature II Blogs</i></u></h1>
-	<p>Edgar Robles
-	</p>
-	
+	<div style="text-align:center;">
+		<p>Edgar Robles</p>
+		<p>Mrs. Overland</p>
+	</div>
 	<h1 style="color:rebeccapurple;"><u>Blogs</u></h1>
 	
 	<style>
