--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <body>
     <h1 style="background-color:snow; text-align:center; font-size:3em;"><u><i>SL Literature II Blogs</i></u></h1>
 	<div style="text-align:center;">
-		<p>Edgar Robles<span style="text-align:center;">Mrs. Overland</span>
+		<p>Edgar Robles</p>
+		<span style="text-align:center;">Mrs. Overland</span>
 	</div>
 	<h1 style="color:rebeccapurple;"><u>Blogs</u></h1>
 	
