--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   </head>
   <body>
     <h1 style="background-color:snow; text-align:center; font-size:3em;"><u><i>SL Literature II Blogs</i></u></h1>
+	  
 	<div style="text-align:center;">
-		<p>Edgar Robles</p>
-		<span style="text-align:center;">Mrs. Overland</span>
+		<p style="text-size:1em;">Edgar Robles</p>
 	</div>
+
 	<h1 style="color:rebeccapurple;"><u>Blogs</u></h1>
 	
 	<style>
