--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1 style="background-color:snow; text-align:center; font-size:3em;"><u><i>SL Literature II Blogs</i></u></h1>
 	  
 	<div style="text-align:center;">
-		<p style="text-size:2em;">Edgar Robles</p>
+		<p style="font-size:2em;">Edgar Robles</p>
 	</div>
 
 	<h1 style="color:rebeccapurple;"><u>Blogs</u></h1>
