--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
   </head>
   <body>
     <h1 style="background-color:snow; text-align:center; font-size:3em;"><u><i>SL Literature II Blogs</i></u></h1>
-	  
-	<div style="text-align:center;">
-		<p style="font-size:1em;">Edgar Robles</p>
-	</div>
 
 	<h1 style="color:rebeccapurple;"><u>Blogs</u></h1>
 	
@@ -23,12 +19,14 @@
 		.left{
 			width:50%;
 			height:123px;
-			float:left;		
+			float:left;
+			border:1px
 		}
 		.right{
 			width:50%;
 			height:123px;
-			float:right;		
+			float:right;
+			border:1px
 		}
 	</style>
     
@@ -43,5 +41,7 @@
 		<div class="right">The narrator telling a story can make a story sound how they want to make it sound. They set the tone for the whole book. Their choice of language is impactful and can foreshadow events in a fiction book. Especially in works from the Gothic and Romantic era. Narrators can also be fully or limited omniscient and tell the reader everything a chracter is feeling.</div>
 		
 	</div>
+	  
+		<p style="font-size:1em;">Edgar Robles</p>
   </body>
 </html> 
