--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 			width:50%;
 			height:123px;
 			float:left;
-			border:1px
+			border:1px solid black;
 		}
 		.right{
 			width:50%;
 			height:123px;
 			float:right;
-			border:1px
+			border:1px solid black;
 		}
 	</style>
     
