--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 			width:100%;
 		}
 		.left{
-			width:50%;
+			width:200px;
 			height:120px;
 			float:left;
 			border:1px solid black;
 		}
 		.right{
-			width:50%;
+			width:200px;
 			height:120px;
 			float:right;
 			border:1px solid black;
