--- a/index.html
+++ b/index.html
@@ -17,16 +17,14 @@
 			width:100%;
 		}
 		.left{
-			width:200px;
+			width:50%;
 			height:120px;
 			float:left;
-			border:1px solid black;
 		}
 		.right{
-			width:200px;
+			width:50%;
 			height:120px;
 			float:right;
-			border:1px solid black;
 		}
 	</style>
     
