--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     
     	<div id="wrap">
 		
-		<div class="left">A narrator may be close to, or even part
+		<div class="left" style="border:1px solid black;">A narrator may be close to, or even part
 		of, the action in a work of fiction, or
 		distant in time and/or space. What is the
 		effect of either the closeness or the
 		distance of narrators?</div>
 	    
-		<div class="right">The narrator telling a story can make a story sound how they want to make it sound. They set the tone for the whole book. Their choice of language is impactful and can foreshadow events in a fiction book. Especially in works from the Gothic and Romantic era. Narrators can also be fully or limited omniscient and tell the reader everything a chracter is feeling.</div>
+		<div class="right" style="border:1px solid black;">The narrator telling a story can make a story sound how they want to make it sound. They set the tone for the whole book. Their choice of language is impactful and can foreshadow events in a fiction book. Especially in works from the Gothic and Romantic era. Narrators can also be fully or limited omniscient and tell the reader everything a chracter is feeling.</div>
 		
 	</div>
 	  
