--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 		<div class="right" style="border:1px solid black;">The narrator telling a story can make a story sound how they want to make it sound. They set the tone for the whole book. Their choice of language is impactful and can foreshadow events in a fiction book. Especially in works from the Gothic and Romantic era. Narrators can also be fully or limited omniscient and tell the reader everything a chracter is feeling.</div>
 		
 	</div>
-	  
+	<div>  
 		<p style="font-size:1em;">Edgar Robles</p>
+	</div>
   </body>
 </html> 
