--- a/index.html
+++ b/index.html
@@ -6,35 +6,26 @@
   </head>
   <body>
     <h1 style="background-color:snow; text-align:center; font-size:3em;"><u><i>SL Literature II Blogs</i></u></h1>
-
+	<p>Edgar Robles
+	</p>
+	
 	<h1 style="color:rebeccapurple;"><u>Blogs</u></h1>
 	
 	<style>
 		body{
 			background-color: whitesmoke;
-		}
-		.left{
-			width:50%;
-			height:120px;
-			float:left;
-		}
-		.right{
-			width:50%;
-			height:120px;
-			float:right;
-		}
+	}
 	</style>
     
-    	<div id="wrap">
+    <section>
 		
-		<div class="left" style="border:1px solid black;"><p>A narrator may be close to, or even part of, the action in a work of fiction, or distant in time and/or space. What is the effect of either the closeness or the distance of narrators?</p></div>
-	    
-		<div class="right" style="border:1px solid black;"><p>The narrator telling a story can make a story sound how they want to make it sound. They set the tone for the whole book. Their choice of language is impactful and can foreshadow events in a fiction book. Especially in works from the Gothic and Romantic era. Narrators can also be fully or limited omniscient and tell the reader everything a chracter is feeling.</p></div>
+		<h3 style="background-color:yellow;">A narrator may be close to, or even part
+		of, the action in a work of fiction, or
+		distant in time and/or space. What is the
+		effect of either the closeness or the
+		distance of narrators?</h3>
+		<p style="background-color:DodgerBlue;"><b>The narrator telling a story can make a story sound how they want to make it sound. They set the tone for the whole book. Their choice of language is impactful and can foreshadow events in a fiction book. Especially in works from the Gothic and Romantic era. Narrators can also be fully or limited omniscient and tell the reader everything a chracter is feeling.</b></p>
 		
-	</div>
-	<section>  
-		<p style="font-size:1em;">Edgar Robles</p>
-		<p>orem ipsum dolor sit amet, consectetur adipiscing elit. Integer facilisis, est id vestibulum pharetra, dolor ipsum auctor tortor, venenatis congue purus odio sed risus. In volutpat tellus pharetra nibh tempus, eu fermentum eros porta. Nam malesuada pulvinar mi, eu suscipit leo. Maecenas malesuada lacus in ex lacinia porttitor. Pellentesque sodales fermentum nibh, sit amet laoreet turpis. Etiam ac lorem ut mi gravida efficitur. Suspendisse finibus eleifend dui sit amet iaculis. Nullam porttitor, quam nec elementum tristique, elit quam iaculis tortor, et faucibus tortor lacus non sem. Morbi pellentesque erat feugiat, molestie leo vel, commodo nisl. Donec elementum est quis felis consequat consequat. Cras nec ultricies purus. Vivamus eu aliquet ligula, nec posuere magna. Duis nisl felis, aliquet a purus in, faucibus vestibulum neque.</p>
 	</section>
   </body>
 </html> 
