--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <title>SL Literature II Blogs</title>
   </head>
   <body>
-    <h1 style="background-color:snow; text-align:center; font-size:3em;"><u><i>SL Literature II Blogs</i></u></h1>
-	<p>Edgar Robles
-	</p>
-	
-	<h1 style="color:rebeccapurple;"><u>Blogs</u></h1>
+    <h1 style="text-align:center; font-size:4em; margin:auto;"><u><i>SL Literature II Blogs</i></u></h1>
 	
 	<style>
 		body{
@@ -19,13 +15,22 @@
     
     <section>
 		
-		<h3 style="background-color:yellow;">A narrator may be close to, or even part
+		<h3 style="background-color:yellow; margin:40px 300px 0px 300px; font-size:24px; padding:5px">A narrator may be close to, or even part
 		of, the action in a work of fiction, or
 		distant in time and/or space. What is the
 		effect of either the closeness or the
 		distance of narrators?</h3>
-		<p style="background-color:DodgerBlue;"><b>The narrator telling a story can make a story sound how they want to make it sound. They set the tone for the whole book. Their choice of language is impactful and can foreshadow events in a fiction book. Especially in works from the Gothic and Romantic era. Narrators can also be fully or limited omniscient and tell the reader everything a chracter is feeling.</b></p>
+		<p style="background-color:rgb(30,144,255); margin:5px 300px 0px 300px; font-size:20px; padding:5px;"><b>The narrator telling a story can make a story sound how they want to make it sound. They set the tone for the whole book. Their choice of language is impactful and can foreshadow events in a fiction book. Especially in works from the Gothic and Romantic era. Narrators can also be fully or limited omniscient and tell the reader everything a chracter is feeling.</b></p>
 		
+	</section>
+	
+	<section>
+	
+	<h3 style="background-color:yellow;"></h3>
+	
+	<p style="background-color:rgb(30,144,255)"></p>
+	
+	
 	</section>
   </body>
 </html> 
