--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>SL Literature II Blogs</title>
   </head>
   <body>
-    <h1 style="text-align:center; font-size:4em; margin:auto;"><u><i>SL Literature II Blogs</i></u></h1>
+    <h1 style="text-align:center; font-size:80px; margin:auto; text-decoration:underline overline; text-shadow:4px 4px 4px grey;"><i>SL Literature II Blogs</i></h1>
 	
 	<style>
 		body{
