--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 	</section>
 	
 	<section>
-	
-	<h3 style="background-color:yellow;"></h3>
-	
-	<p style="background-color:rgb(30,144,255)"></p>
-	
-	
+		
+		<h3 style="background-color:yellow; margin:40px 20% 0px 20%; font-size:24px; padding:10px"> “We read fiction because it pleases us,
+		is beautiful.” What, to you, constitutes this “beauty” in a work of prose fiction and to what extent and by what means has the author you’ve studied created “beautiful” work?</h3>
+		<p style="background-color:rgb(30,144,255); margin:5px 20% 0px 20%; font-size:20px; padding:10px;"><b>I think the beauty mentioned there is urealistic beauty. Something models in magazines have. Almost the same concept as doing things in video games that you could never or would never do in real life. Being in a world where consquences won't affect you seems wonderful, even in a fiction novel.</b></p>
+		
 	</section>
+	
   </body>
 </html> 
