--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
     
     <section>
 		
-		<h3 style="background-color:yellow; margin:40px 20% 0px 20%; font-size:24px; padding:10px">A narrator may be close to, or even part
+		<h3 style="background-color:yellow; margin:40px 20% 0px 20%; font-size:24px; padding:10px font-family:helvetica;">A narrator may be close to, or even part
 		of, the action in a work of fiction, or
 		distant in time and/or space. What is the
 		effect of either the closeness or the
 		distance of narrators?</h3>
-		<p style="background-color:rgb(30,144,255); margin:5px 20% 0px 20%; font-size:20px; padding:10px;"><b>The narrator telling a story can make a story sound how they want to make it sound. They set the tone for the whole book. Their choice of language is impactful and can foreshadow events in a fiction book. Especially in works from the Gothic and Romantic era. Narrators can also be fully or limited omniscient and tell the reader everything a chracter is feeling.</b></p>
+		<p style="background-color:rgb(30,144,255); margin:5px 20% 0px 20%; font-size:20px; padding:10px; font-family:helvetica;"><b>The narrator telling a story can make a story sound how they want to make it sound. They set the tone for the whole book. Their choice of language is impactful and can foreshadow events in a fiction book. Especially in works from the Gothic and Romantic era. Narrators can also be fully or limited omniscient and tell the reader everything a chracter is feeling.</b></p>
 		
 	</section>
 	
 	<section>
 		
-		<h3 style="background-color:yellow; margin:40px 20% 0px 20%; font-size:24px; padding:10px"> “We read fiction because it pleases us,
+		<h3 style="background-color:yellow; margin:40px 20% 0px 20%; font-size:24px; padding:10px; font-family:helvetica;"> “We read fiction because it pleases us,
 		is beautiful.” What, to you, constitutes this “beauty” in a work of prose fiction and to what extent and by what means has the author you’ve studied created “beautiful” work?</h3>
-		<p style="background-color:rgb(30,144,255); margin:5px 20% 0px 20%; font-size:20px; padding:10px;"><b>I think the beauty mentioned there is urealistic beauty. Something models in magazines have. Almost the same concept as doing things in video games that you could never or would never do in real life. Being in a world where consquences won't affect you seems wonderful, even in a fiction novel.</b></p>
+		<p style="background-color:rgb(30,144,255); margin:5px 20% 0px 20%; font-size:20px; padding:10px; font-family:helvetica;"><b>I think the beauty mentioned there is urealistic beauty. Something models in magazines have. Almost the same concept as doing things in video games that you could never or would never do in real life. Being in a world where consquences won't affect you seems wonderful, even in a fiction novel.</b></p>
 		
 	</section>
 	
