--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <section>
 		
-		<h3 style="background-color:yellow; margin:40px 20% 0px 20%; font-size:24px; padding:10px font-family:helvetica;">A narrator may be close to, or even part
+		<h3 style="background-color:yellow; margin:40px 20% 0px 20%; font-size:24px; padding:10px; font-family:helvetica;">A narrator may be close to, or even part
 		of, the action in a work of fiction, or
 		distant in time and/or space. What is the
 		effect of either the closeness or the
