--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>SL Literature II Blogs</title>
+	  
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	  
   </head>
   <body>
     <h1 style="text-align:center; font-size:80px; margin:auto; text-decoration:underline overline; text-shadow:4px 4px 4px grey;"><i>SL Literature II Blogs</i></h1>
