--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>SL Literature II Blogs</title>
 	  
-	<link rel="shortcut icon" type="image/x-icon" href="blog/favicon.ico">
+	<link rel="shortcut icon" href="e414rr.github.io/favicon.ico" type="image/x-icon">
 	  
   </head>
   <body>
