--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>SL Literature II Blogs</title>
+	  <link rel="shortcut icon" href="blog/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <h1 style="background-color:snow; text-align:center; font-size:3em;"><u><i>SL Literature II Blogs</i></u></h1>
