--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		distant in time and/or space. What is the
 		effect of either the closeness or the
 		distance of narrators?</h3>
-		<p style="background-color:rgb(30,144,255); margin:5px 20% 0px 20%; font-size:20px; padding:10px; font-family:helvetica;"><b>The narrator telling a story can make a story sound how they want to make it sound. They set the tone for the whole book. Their choice of language is impactful and can foreshadow events in a fiction book. Especially in works from the Gothic and Romantic era. Narrators can also be fully or limited omniscient and tell the reader everything a chracter is feeling.</b></p>
+		<p style="background-color:rgb(30,144,255); margin:5px 20% 0px 20%; font-size:20px; padding:10px; font-family:helvetica;"><b>The narrator telling a story can make a story sound how they want to make it sound. They set the tone for the whole book. Their choice of language is impactful and can foreshadow events in a fiction book. Especially in works from the Gothic and Romantic era. Narrators can also be fully or limited omniscient and tell the reader everything a chracter is feeling. The drawback comes in when talking about other characters in the book. If the narrator is speaking in a first person point of view then we only know what that character is feeling and we don't know what other characters are feeling or their emotions.</b></p>
 		
 	</section>
 	
