--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@
     
     <section>
 		
-		<h3 style="background-color:yellow; margin:40px 20% 0px 20%; font-size:24px; padding:10px; font-family:helvetica;">A narrator may be close to, or even part
-		of, the action in a work of fiction, or
-		distant in time and/or space. What is the
-		effect of either the closeness or the
-		distance of narrators?</h3>
+		<h3 style="background-color:yellow; margin:40px 20% 0px 20%; font-size:24px; padding:10px; font-family:helvetica;">A narrator may be close to, or even part of, the action in a work of fiction, or distant in time and/or space. What is the effect of either the closeness or the distance of narrators?</h3>
 		<p style="background-color:rgb(30,144,255); margin:5px 20% 0px 20%; font-size:20px; padding:10px; font-family:helvetica;"><b>The narrator telling a story can make a story sound how they want to make it sound. They set the tone for the whole book. Their choice of language is impactful and can foreshadow events in a fiction book. Especially in works from the Gothic and Romantic era. Narrators can also be fully or limited omniscient and tell the reader everything a chracter is feeling. The drawback comes in when talking about other characters in the book. If the narrator is speaking in a first person point of view then we only know what that character is feeling and we don't know what other characters are feeling or their emotions.</b></p>
 		
 	</section>
@@ -35,5 +31,15 @@
 		
 	</section>
 	
+	  <h3 style="background-color:yellow; margin:40px 20% 0px 20%; font-size:24px; padding:10px; font-family:helvetica;">“Defiance becomes our duty in the face of injustice.” Explore the ways in which the writer has attempted to persuade us to accept or challenge this view.</h3>
   </body>
+	<p style="background-color:rgb(30,144,255); margin:5px 20% 0px 20%; font-size:20px; padding:10px; font-family:helvetica;"><b>   </b></p>
+	
+	 <h3 style="background-color:yellow; margin:40px 20% 0px 20%; font-size:24px; padding:10px; font-family:helvetica;">Authors use the portrayal of characters who are somehow trapped or imprisoned as a means to criticize society. Based on the novel, show to what extent and in what ways this statement is true.</h3>
+	<p style="background-color:rgb(30,144,255); margin:5px 20% 0px 20%; font-size:20px; padding:10px; font-family:helvetica;"><b>   </b></p>
+	
+	
+	
+	
+	
 </html> 
