--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 		is beautiful.” What, to you, constitutes this “beauty” in a work of prose fiction and to what extent and by what means has the author you’ve studied created “beautiful” work?</h3>
 		<p style="background-color:rgb(30,144,255); margin:5px 20% 0px 20%; font-size:20px; padding:10px; font-family:helvetica;"><b>I think the beauty mentioned there is urealistic beauty. Something models in magazines have. Almost the same concept as doing things in video games that you could never or would never do in real life. Being in a world where consquences won't affect you seems wonderful, even in a fiction novel.</b></p>
 	
-	  
+	  	<h3 style="background-color:yellow; margin:40px 20% 0px 20%; font-size:24px; padding:10px; font-family:helvetica;">Some writers present a world view thatis pessimistic and disorderly, while others present a world of hope and possibility. How, and to what extent, does the writer reflect these views?</h3>
+  </body>
+	<p style="background-color:rgb(30,144,255); margin:5px 20% 0px 20%; font-size:20px; padding:10px; font-family:helvetica;"><b>   </b></p>
 	
 	
 	</section>
