--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
 	    
  		<h3 style="background-color:yellow; margin:40px 20% 0px 20%; font-size:24px; padding:10px; font-family:helvetica;">“Defiance becomes our duty in the face of injustice.” Explore the ways in which the writer has attempted to persuade us to accept or challenge this view.</h3>
   </body>
-	<p style="background-color:rgb(30,144,255); margin:5px 20% 0px 20%; font-size:20px; padding:10px; font-family:helvetica;"><b>   </b></p>
+	<p style="background-color:rgb(30,144,255); margin:5px 20% 0px 20%; font-size:20px; padding:10px; font-family:helvetica;"><b>Charlotte Brontë uses Jane Eyre to express that way of thinking. One of the earliest examples is in the beginning of the book where Jane fights back with John. The Reed family treats her unfairly because her family is not wealthy. She endures it sometimes but she knows she cannot continue to live the way she has./b></p>
 	  
 	  
 	   <h3 style="background-color:yellow; margin:40px 20% 0px 20%; font-size:24px; padding:10px; font-family:helvetica;">Authors use the portrayal of characters who are somehow trapped or imprisoned as a means to criticize society. Based on the novel, show to what extent and in what ways this statement is true.</h3>
-	<p style="background-color:rgb(30,144,255); margin:5px 20% 0px 20%; font-size:20px; padding:10px; font-family:helvetica;"><b>   </b></p>
+	<p style="background-color:rgb(30,144,255); margin:5px 20% 0px 20%; font-size:20px; padding:10px; font-family:helvetica;">
+<b></b></p>
 	  
 		
 		<h3 style="background-color:yellow; margin:40px 20% 0px 20%; font-size:24px; padding:10px; font-family:helvetica;"> “We read fiction because it pleases us,
@@ -41,7 +42,5 @@
 	
 	
 	</section>
-	
-	
 	
 </html> 
