--- a/index.html
+++ b/index.html
@@ -109,13 +109,12 @@
 <!-- end www.htmlcommentbox.com -->
 	</section>
 
-<form action="/html/tags/html_form_tag_action.cfm" method="post">
-<textarea name="comments" id="comments" style="width:96%;height:90px;padding:2%;font:1.4em/1.6em cursive;background-color:gold;color:hotpink;">
-Hey... say something!
-</textarea>
-<input type="submit" value="Submit">
-</form>
-
+<!-- HTML Codes by Quackit.com -->
+<style type="text/css">
+textarea.html-text-box {background-color:#ffffff;background-image:url(http://);background-repeat:no-repeat;background-attachment:fixed;border-width:1;border-style:solid;border-color:#cccccc;font-family:Arial;font-size:14pt;color:#000000;}
+input.html-text-box {background-color:#ffffff;font-family:Arial;font-size:14pt;color:#000000;}
+</style>
+<form method="post" action="http://"><textarea name="comments" cols="30" rows="5" class="html-text-box">Comments here...</textarea><br><input type="submit" value="Submit" class="html-text-box"><input type="reset" value="Reset" class="html-text-box"></form>
 
 </body>
 
